--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Adding config.py file.
+config.py
+
+API_practice.ipynb
+random_function_practice.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
